--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   "devDependencies": {
     "i18n2": "git://github.com/medikoo/i18n2.git",
     "jsdom": "^3.1.2",
-    "xlint": "~0.2.1",
-    "xlint-jslint-medikoo": "~0.1.2",
-    "tad": "0.2"
+    "xlint": "^0.2.1",
+    "xlint-jslint-medikoo": "^0.1.3",
+    "tad": "^0.2.2"
   },
   "scripts": {
     "lint": "node node_modules/xlint/bin/xlint --linter=node_modules/xlint-jslint-medikoo/index.js --no-cache --no-stream",
