--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "i18n2": "git://github.com/medikoo/i18n2.git",
-    "jsdom": "^3.1.2",
+    "jsdom": "9",
     "xlint": "^0.2.1",
     "xlint-jslint-medikoo": "^0.1.3",
     "tad": "^0.2.2"
